--- a/back/package.json
+++ b/back/package.json
@@ -3,6 +3,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "cookie-parser": "^1.4.7",
+    "express": "^4.21.1",
+    "file-system-db": "^2.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
